--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     <div class="main">
         <h1>To Do List App</h1>
         <div class="list">
-            <input type="text" id="input">
-            <button id="add">Add</button>
+            <input type="text" id="input" onfocus="this.value=''">
+            <button id="btn">Add</button>
             <div id="tasks">
+                <ul id="todolist"></ul>
+                <!-- append tasks lists here  -->
             </div>
         </div>
     </div>
 </body>
 <script src="./app.js"></script>
+<script src="https://kit.fontawesome.com/01543a5e59.js" crossorigin="anonymous"></script>
 
 </html>
